# SoupBoss

./: .gitignore  15_model.json  CLAUDE.md  CLI_REFERENCE.md  README.md  alltimings.json  embedding_speed_test.py  hero_page.html  kill_webapp.py  main.py  models.txt  pyproject.toml  restart_webapp.py  restart_webapp.sh  soupboss.config.json  start_webapp.py  webapp.py  webapp_manager.py
ref_data/: README.md  company_list.xlsx  disney_data_importer.py  disney_workday_scraper.py  greenhouse_fetch.py  lever_fetch.py  smartrecruiters_fetch.py
ref_data/resumes/: .smbdeleteAAAc5210  01-Accountant.docx  01-Desktop Support.docx  01-Office Coordinator.docx  02-Accountant.docx  02-Desktop Support.docx  02-Office Coordinator.docx  Mickey01_docx.docx  Minnie01_docx.docx  README.md  sample_resume.txt
ref_data/utils/: 20250914list-out.csv  20250914list.csv  README.md  ats_probe.py
soupboss/: __init__.py  cli.py  config.py  db.py  embedding_evaluation.py  embeddings.py  export.py  ingestion.py  maintenance.py  matching.py  pdf_export.py  resumes.py
static/: manifest.json
static/css/: style.css
static/js/: app.js
templates/: index.html
