[project]
name = "SoupBoss"
version = "0.1.0"
description = "JobGoblin - Intelligent job matching system with semantic similarity scoring"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "html2text>=2024.2.26",
    "ollama>=0.3.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "sqlite-vec>=0.1.0",
    "python-dotenv>=1.0.0",
    "PyPDF2>=3.0.0",
    "pandas>=2.0.0",
    "python-docx>=1.2.0",
    "reportlab>=4.4.3",
    "tqdm>=4.67.1",
    "argparse>=1.4.0",
]

[project.scripts]
soupboss = "soupboss.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["soupboss"]
