[project]
name = "SoupBoss"
version = "0.1.0"
description = "SoupBoss - Intelligent job matching system with semantic similarity scoring"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "html2text>=2024.2.26",
    "ollama>=0.3.0",
    "sqlite-vec>=0.1.0",
    "python-dotenv>=1.0.0",
    "PyPDF2>=3.0.0",
    "pandas>=2.0.0",
    "python-docx>=1.2.0",
    "reportlab>=4.4.3",
    "argparse>=1.4.0",
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
]

[project.scripts]
soupboss = "soupboss.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["soupboss"]
